2003-01-23  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/ws2_32.def (getaddrinfo, freeaddrinfo and getnameinfo):
	Add stubs.
	* include/ws2tcpip.h (IPV6_*) Add IPPROTO_IPV6 level socket
	options.

2003-01-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (IMAGE_FILE_AGGRESIVE_WS_TRIM
	IMAGE_FILE_LARGE_ADDRESS_AWARE): Add defines.

2003-01-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/accctrl.h (enum _SE_OBJECT_TYPE): Add
	SE_REGISTRY_WOW64_32KEY.
	Reported by: Dimitri Papadopoulos  <dimitri_at@sourceforge.users.net>

2003-01-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (HDN_GETDISPINFO[AW]: Add defines.
	(tagNMHDDISPINFO[AW}: Add structures and typedefs.
	Reported by: Mat Nieuwenhoven  <matnieuw@users.sourceforge.net>

2003-01-10  Christopher Faylor  <cgf@redhat.com>

	* include/winsock2.h: Remove gethostname from INSIDE_CYGWIN protection.

2003-01-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/dxguid.c: Don't #include <objbase.h>.
	* include/unknwn.h: Partially revert change of 2002-12-26.
	Don't include <ole2.h>.

2003-01-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/dinput.c: Don't #include <objbase.h>.

2003-01-08  Bart Oldeman  <bartoldeman@users.sourceforge.net>

	* include/windows.h (ole2.h):Do #include for
	__WATCOMC__.

2003-01-05  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (SPI_SETWHEELSCROLLLINES) Add define.
	* include/zmouse.h (WHEEL_DELTA): Guard against prior
	definition.
	(WHEEL_PAGESCROLL): Likewise.
	(SPI_SETWHEELSCROLLLINES): Define, if not already done.

2003-01-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (SPI_GETWHEELSCROLLLINES) Add define.
	(WHEEL_PAGESCROLL): Add define.

2003-01-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (tagNMTOOLBAR[AW]): Replace obsolete struct
	names tagTBNOTIFY[AW] and typedefs. Add defines for backward